# api-server

./: .coverage  .env  .env.example  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.kiro/specs/api-server/: design.md  requirements.md  tasks.md
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md
scripts/: db-migrate.sh  db-seed.sh  dev-server.sh  format.sh  lint.sh  quality-check.sh  setup-dev.sh  test.sh
src/api_server/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  logging_config.py  main.py  middleware.py
src/api_server/models/: __init__.py  item.py  post.py  user.py
src/api_server/repositories/: __init__.py  item_repository.py  post_repository.py  user_repository.py
src/api_server/routers/: __init__.py  auth.py  health.py  items.py  posts.py
src/api_server/schemas/: __init__.py  auth_schemas.py  item_schemas.py  post_schemas.py
src/api_server/services/: __init__.py  auth_service.py  item_service.py  post_service.py  user_service.py
tests/: conftest.py  test_auth_endpoints.py  test_auth_service.py  test_health.py  test_item_repository.py  test_item_service.py  test_items.py  test_user_repository.py  test_user_service.py
